Guess what! More writing!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
   ],
   "files.associations": {
     "iostream": "cpp"
-  }
+  },
+  "editor.wordWrap": "on",
+  "workbench.colorTheme": "Ysgrifennwr"
 }
