--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
     "iostream": "cpp"
   },
   "editor.wordWrap": "on",
-  "workbench.colorTheme": "Eva Light"
+  "workbench.colorTheme": "Ysgrifennwr"
 }
