Content basically done! Now for a bit of editing!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
     "iostream": "cpp"
   },
   "editor.wordWrap": "on",
-  "workbench.colorTheme": "Ysgrifennwr"
+  "workbench.colorTheme": "Ayu Light Bordered"
 }
